--- a/front/index.html
+++ b/front/index.html
@@ -4,7 +4,7 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>슬리액</title>
+    <title>slack</title>
     <style>
       html, body {
           margin: 0;
@@ -23,9 +23,6 @@
           box-sizing: border-box;
       }
     </style>
-    <link rel="stylesheet" href="https://a.slack-edge.com/bv1-8/client-boot-styles.57e47b5.css" crossorigin="anonymous" />
-    <link rel="shortcut icon" href="https://a.slack-edge.com/cebaa/img/ico/favicon.ico" />
-    <link href="https://a.slack-edge.com/bv1-8/slack-icons-v2-40cccfd.woff2" rel="preload" as="font" crossorigin="anonymous" />
   </head>
   <body>
     <div id="app"></div>
