--- a/front/index.html
+++ b/front/index.html
@@ -28,7 +28,9 @@
     <link href="https://a.slack-edge.com/bv1-9/slack-icons-v2-16ca3a7.woff2" rel="preload" as="font" crossorigin="anonymous" />
   </head>
   <body>
-    <div id="app"></div>
+    <div id="app">
+      
+    </div>
     <script src="/dist/app.js"></script>
   </body>
 </html>
